- Fixed: angular change detection always triggered when scrolling when scrollbar content size dynamically changed - Fixed: scrollbar ('auto') was always visible after dynamic content size changes (even if the size gets smaller than the available size)
Demo:

- add dynamic content example
- add overflow 'scroll' example
- add console output to test angular change detection (trigger)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -51,6 +51,10 @@ h1{
   }
 }
 
+.custom-scroll{
+  background-color: darkorange;
+}
+
 pri-scrollbar{
   border: 1px solid black;
   height: 300px;
@@ -79,6 +83,17 @@ pri-scrollbar{
     background-color: #343434;
     color: white;
   }
+}
+
+.dynamic-content{
+  background-color: lavender;
+}
+
+.dynamic-item{
+  display: block;
+  padding: 40px;
+  box-sizing: border-box;
+  border-bottom: 1px solid gray;
 }
 
 //style
